# Dr.-Lawyer-legal-intake-assistant

./: README.md
src/: .env.example  main.py  pyproject.toml
src/routes/: optimize.py  optimize_case_description.py  optimize_offer.py  start_intake.py
src/workflow/: graph.py  prompts.py
